--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@ img:hover{
 }
 
 p{
-    text-align: center;
+     text-align: center;
     background: coral;
     width: 70%;
-    margin: 40px auto
+    margin: auto;
+    font-size: 22px;
+    padding: 20px;
+    border-radius: 8px;
+    color: white
 
 }
 
@@ -40,8 +44,8 @@ h3{
 }
 
 ul, ol{
-    width: 80%
-    margin; ;
+    width: 80%;
+    margin: auto;
     padding: 20px;
 }
 
